--- a/pom.xml
+++ b/pom.xml
@@ -175,6 +175,11 @@
       <artifactId>xmlschema-core</artifactId>
       <version>2.1.0</version>
     </dependency>
+    <dependency>
+      <groupId>com.alibaba</groupId>
+      <artifactId>fastjson</artifactId>
+      <version>1.2.62</version>
+    </dependency>
 
     <!-- axis2需要的jar -->
     <!--  <dependency>
