--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -3,18 +3,24 @@
  "http://java.sun.com/dtd/web-app_2_3.dtd" >
 
 <web-app>
-  <display-name>Archetype Created Web Application</display-name><servlet>
-  <servlet-name>springMVC</servlet-name>
-  <servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>
-  <init-param>
-    <param-name>contextConfigLocation</param-name>
-    <param-value>classpath:springContext.xml</param-value>
-  </init-param>
-  <load-on-startup>1</load-on-startup>
-</servlet>
+  <display-name>Archetype Created Web Application</display-name>
+  <servlet>
+    <servlet-name>springMVC</servlet-name>
+    <servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>
+    <init-param>
+      <param-name>contextConfigLocation</param-name>
+      <param-value>classpath:springContext.xml</param-value>
+    </init-param>
+    <load-on-startup>1</load-on-startup>
+  </servlet>
   <servlet-mapping>
     <servlet-name>springMVC</servlet-name>
     <url-pattern>/</url-pattern>
   </servlet-mapping>
-
+  <servlet-mapping>
+    <!--优先级 精确匹配 gt 最长路径匹配 gt 后缀匹配 gt 默认匹配(以"/"匹配) -->
+    <!-- 目前路径匹配有问题，不能使用类似 /rest/* -->
+    <servlet-name>springMVC</servlet-name>
+    <url-pattern>/rest/loginController</url-pattern>
+  </servlet-mapping>
 </web-app>
