--- a/pom.xml
+++ b/pom.xml
@@ -180,6 +180,16 @@
       <artifactId>fastjson</artifactId>
       <version>1.2.62</version>
     </dependency>
+    <dependency>
+      <groupId>org.dom4j</groupId>
+      <artifactId>dom4j</artifactId>
+      <version>2.1.1</version>
+    </dependency>
+    <dependency>
+      <groupId>log4j</groupId>
+      <artifactId>log4j</artifactId>
+      <version>1.2.17</version>
+    </dependency>
 
     <!-- axis2需要的jar -->
     <!--  <dependency>
