--- a/pom.xml
+++ b/pom.xml
@@ -190,6 +190,13 @@
       <artifactId>log4j</artifactId>
       <version>1.2.17</version>
     </dependency>
+    <!--lombok节省getter setter-->
+    <dependency>
+      <groupId>org.projectlombok</groupId>
+      <artifactId>lombok</artifactId>
+      <version>1.18.12</version>
+      <scope>provided</scope>
+    </dependency>
 
     <!-- axis2需要的jar -->
     <!--  <dependency>
